modify the index page; use the settings value

--- a/assets/www/login.html
+++ b/assets/www/login.html
@@ -22,7 +22,7 @@
         <div id="user-login" data-role="page" data-theme="a">
 
 			<div data-role="header">
-				<a href="index.html" data-role="button" data-icon="home">Home</a>
+				<a href="index.html" data-role="button" data-icon="home" rel="external">Home</a>
 				<h1>User Login</h1>
 				<a href="settings.html" data-role="button" data-icon="gear" rel="external">Settings</a>
 			</div><!-- /header -->
