--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -8,6 +8,7 @@
         
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />     
         <link rel="stylesheet" type="text/css" href="themes/android-theme.css" />   
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
         
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
         <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -19,22 +20,17 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="user-login" data-role="page" data-theme="a">
+        <div id="index" data-role="page" data-theme="a">
 
 			<div data-role="header">
-				<a href="index.html" data-role="button" data-icon="home">Home</a>
-				<h1>User Login</h1>
+				<a href="index.html" data-role="button" data-icon="home" rel="external">Home</a>
+				<h1>Let's Hire</h1>
 				<a href="settings.html" data-role="button" data-icon="gear" rel="external">Settings</a>
 			</div><!-- /header -->
 		
 			<div data-role="content">	
-		            <form id="user-login-form" data-ajax="false" action="http://localhost:4567/login">
-		                <label for="username">Username:</label>
-		                <input type="text" name="username" id="username"/>
-		                <label for="password">Password:</label>
-		                <input type="password" name="password" id="password"/>
-		                <input type="submit" value="Login" />
-		            </form>
+		            <div class="app">
+		            </div>
 			</div><!-- /content -->
 		</div><!-- /page -->
     </body>
