show login wrong password error.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -25,7 +25,7 @@
 			<div data-role="header">
 				<a href="index.html" data-role="button" data-icon="home" rel="external">Home</a>
 				<h1>Let's Hire</h1>
-				<a href="settings.html" data-role="button" data-icon="gear" rel="external">Settings</a>
+				<a href="settings.html" data-role="button" data-icon="gear">Settings</a>
 			</div><!-- /header -->
 		
 			<div data-role="content">	
