--- a/assets/www/login.html
+++ b/assets/www/login.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    	<title>Let's Hire</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-        
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />     
-        <link rel="stylesheet" type="text/css" href="themes/android-theme.css" />   
-        
-        <script type="text/javascript" src="cordova-2.5.0.js"></script>
-        <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
-		<script type="text/javascript">
-			var DEBUG_ANDROID_THEME=true
-		</script>    
-		<script type="text/javascript" src="js/jquery.mobile.android-theme.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>  
-    </head>
     <body>
         <div id="user-login" data-role="page" data-theme="a">
 
 			<div data-role="header">
 				<a href="index.html" data-role="button" data-icon="home" rel="external">Home</a>
 				<h1>User Login</h1>
-				<a href="settings.html" data-role="button" data-icon="gear" rel="external">Settings</a>
+				<a href="settings.html" data-role="button" data-icon="gear">Settings</a>
 			</div><!-- /header -->
 		
 			<div data-role="content">	
