upload photo from camera

--- a/assets/www/interview.html
+++ b/assets/www/interview.html
@@ -14,7 +14,8 @@
 		            <h5>11:30Am @ Room 203</h5>
 		            <h5>Applying for Sr.MTS position.</h5>
 		            <h5>Current Status: <span id="status" style="color:yellow;">Not Yet Start</span></h5>
-		            <input type="submit" value="Attach Whiteboard Photo" data-mini="true"/>
+		            <span id="photo"></span>
+		            <input type="submit" value="Attach Whiteboard Photo" data-mini="true"/><!-- to disable -->
 		            <br>
 		            <a id="start" href="#" data-role="button">Start</a>
 		            <a id="done" href="#" data-role="button">Done</a>
