--- a/assets/www/login.html
+++ b/assets/www/login.html
@@ -12,7 +12,7 @@
 			<div data-role="content">	
 		            <form id="user-login-form" data-ajax="false" action="http://localhost:4567/login">
 		                <label for="username">Username:</label>
-		                <input type="text" name="username" id="username"/>
+		                <input type="text" name="username" id="username" value="test"/>
 		                <label for="password">Password:</label>
 		                <input type="password" name="password" id="password"/>
 		                <input type="submit" value="Login" />
