--- a/assets/www/settings.html
+++ b/assets/www/settings.html
@@ -12,9 +12,9 @@
 			<div data-role="content">	
 	            <form id="settings-form" data-ajax="false" action="">
 	                <label for="domain">Server Domain:</label>
-	                <input type="text" name="domain" id="domain" value="localhost" placeholder="letshire.abc.com"/>
+	                <input type="text" name="domain" id="domain" value="lets-hire.cloudfoundry.com" placeholder="letshire.abc.com"/>
 	                <label for="port">Server Port:</label>
-	                <input type="text" name="port" id="port" value="4567" placeholder="3000"/>
+	                <input type="text" name="port" id="port" value="80" placeholder="3000"/>
 	                <input type="submit" value="Save" />
 	            </form>
 			</div><!-- /content -->
