--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,7 +4,7 @@
     	<title>Let's Hire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, height=device-height" />
         
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />     
         <link rel="stylesheet" type="text/css" href="themes/android-theme.css" />   
@@ -22,16 +22,27 @@
     <body>
         <div id="index" data-role="page" data-theme="a">
 
-			<div data-role="header">
-				<a href="index.html" data-role="button" data-icon="home" rel="external">Home</a>
+			<div data-role="header" data-position="fixed">
 				<h1>Let's Hire</h1>
-				<a href="settings.html" data-role="button" data-icon="gear">Settings</a>
 			</div><!-- /header -->
 		
-			<div data-role="content">	
-		            <div class="app">
-		            </div>
+			<div data-role="content">
+				<form id="user-login-form">
+					<label for="username">Username:</label>
+					<input type="text" name="username" id="username" value="username"/>
+					<label for="password">Password:</label>
+					<input type="password" name="password" id="password" />
+					<!-- <input type="submit" value="Log in" action="interviews.html"/> -->
+					<a href="interviews.html" data-role="button">Log in</a>
+				</form>	
 			</div><!-- /content -->
+			<div data-role="footer" data-position="fixed">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Setup</a></li>
+					</ul>
+				</div>	
+			</div>
 		</div><!-- /page -->
     </body>
 </html>
