[46356183] change popup dialog style

--- a/assets/www/interviews.html
+++ b/assets/www/interviews.html
@@ -29,8 +29,8 @@
 			</div><!-- /header -->
 			
 			<div data-role="popup" id="userMenu">
-				<ul data-role="listview" data-inset="true">
-					<li data-role="divider"> Username </li>
+				<ul data-role="listview" data-inset="true" data-theme="d" style="min-width: 210px;" data-theme="d">
+					<li data-role="divider" data-theme="e"> Username </li>
 					<li data-corners="false" data-icon="arrow-r" data-iconpos="right">
 						<a href="settings.html">Settings</a>
 					</li>
