--- a/assets/www/interview.html
+++ b/assets/www/interview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+    <head>
     	<title>Let's Hire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
@@ -22,32 +22,57 @@
     <body>
         <div id="interview" data-role="page" data-theme="a">
 
-			<div data-role="header"  data-position="fixed">
-				<a href="interviews.html" data-role="button" data-icon="arrow-l" class="">Back</a>
-				<h1>Interview Details</h1>	
-				<a href="feedback.html" data-role="button" data-icon="star">Feedback</a>				
-			</div><!-- /header -->
+	    <div data-role="header"  data-position="fixed">
+		    <a href="interviews.html" data-role="button" data-icon="arrow-l" class="">Back</a>
+		    <h1>Interview Details</h1>	
+		    <a href="feedback.html" data-role="button" data-icon="star">Feedback</a>				
+	    </div><!-- /header -->
 		
-			<div data-role="content">	
-		            <h2>Avery Walker</h2>
-		            <h5>11:30Am @ Room 203</h5>
-		            <h5>Applying for Sr.MTS position.</h5>
-		            <h5>Current Status: <span id="status" style="color:yellow;">Not Yet Start</span></h5>
-		            <span id="photo"></span>
-		            <input type="submit" value="Attach Whiteboard Photo" data-mini="true"/><!-- to disable -->
-		            <br>
-			</div><!-- /content -->
-			
-			<div data-role="footer" data-position="fixed">
-				<div data-role="navbar">
-					<ul>
-						<li><a id="interview-action" href="#" data-icon="arrow-r">Start</a></li>
-						<li><a id="interview-newnote" href="note.html" data-icon="plus">New Note</a></li>
-						<li><a id="interview-notes" href="notes.html" data-icon="grid">Notes</a></li>
-						<li><a href="settings.html" data-icon="gear">Settings</a></li>
-					</ul>
-				</div>
-			</div>
-		</div><!-- /page -->
+	    <div data-role="content">	
+		<h2>Avery Walker</h2>
+		<h5>11:30Am @ Room 203</h5>
+		<h5>Applying for Sr.MTS position.</h5>
+		<h5>Current Status: <span id="status" style="color:yellow;">Not Yet Start</span></h5>
+		<h5>Notes:</h5>
+		<div data-role="collapsible-set">
+		    <div data-role="collapsible" data-theme="a" data-content-theme="c" data-inset="false" class="interviewNoteItem">
+			<h3>Q: bla bla bla</h3>
+			<ul data-role="listview">
+			    <li><a href="#">some image</a></li>
+			    <li><a href="#">some image</a></li>
+			    <li><a href="#">some image</a></li>
+			</ul>
+		    </div>
+		    <div data-role="collapsible" data-theme="a" data-content-theme="c" data-inset="false" class="interviewNoteItem">
+			<h3>Q: foo bar foo bar</h3>
+			<ul data-role="listview">
+			    <li><a href="#">some image</a></li>
+			    <li><a href="#">some image</a></li>
+			</ul>
+		    </div>
+		</div>
+		
+		<br>
+	    </div><!-- /content -->
+	    
+	    <div data-role="footer" data-position="fixed">
+		    <div data-role="navbar">
+			    <ul>
+				    <li><a id="interview-action" href="#" data-icon="arrow-r">Start</a></li>
+				    <li><a id="interview-newnote" href="note.html" data-icon="plus">New Note</a></li>
+				    <li><a id="interview-notes" href="notes.html" data-icon="grid">Notes</a></li>
+				    <li><a href="settings.html" data-icon="gear">Settings</a></li>
+			    </ul>
+		    </div>
+	    </div>
+	    
+	    <div data-role="popup" id="interviewNoteMenu">
+		<ul data-role="listview"  data-inset="true" style="min-width: 210px" data-theme="d" class="ui-listview">
+		    <li data-role="divider" data-theme="e">Options</li>
+		    <li><a href="note.html" data-corners="false" data-icon="arrow-r" data-iconpos="right">Details</a></li>
+		    <li><a href="#" data-corners="false" data-icon="arrow-r" data-iconpos="right">Delete</a></li>
+		</ul>
+	    </div>
+	</div><!-- /page -->
     </body>
 </html>
