change the theme and some pages view

--- a/assets/www/candidate.html
+++ b/assets/www/candidate.html
@@ -20,38 +20,23 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="interview" data-role="page" data-theme="c">
+        <div id="candidate" data-role="page" data-theme="c">
 
 	    <div data-role="header"  data-position="fixed">
-		    <a href="interviews.html" data-role="button" data-icon="arrow-l" class="" data-transition="slide">Back</a>
-		    <h1>Interview Details</h1>	
-		    <a href="feedback.html" data-role="button" data-icon="star">Feedback</a>				
+		    <a href="interview.html" data-role="button" data-icon="arrow-l" class="">Back</a>
+		    <h1>Candidate Resume</h1>				
 	    </div><!-- /header -->
 		
 	    <div data-role="content">	
-		<a href="candidate.html"><h2>Avery Walker</h2></a>
-		<h5>11:30Am @ Room 203</h5>
-		<h5>Applying for Sr.MTS position.</h5>
-		<h5>Current Status: <span id="status" style="color:yellow;">Not Yet Start</span></h5>
-		<h5>Notes: NUMBER</h5>
-		<h5>Latest 3 Notes:</h5>
-		<a href="note.html"><h5>Note5</h5></a>
-		<a href="note.html"><h5>Note4</h5></a>
-		<a href="note.html"><h5>Note3</h5></a>
-		<a href="notes.html"><h5>See all</h5></a>
+		<h2>Avery Walker</h2></a>
+		<h5>Age: XXX</h5>
+		<h5>Male</h5>
+		<h5>Experience:</h5>
+                <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+		<h5>.............</h5>
+		
 		<br>
 	    </div><!-- /content -->
-	    
-	    <div data-role="footer" data-position="fixed">
-		    <div data-role="navbar">
-			    <ul>
-				    <li><a id="interview-action" href="#" data-icon="arrow-r">Start</a></li>
-				    <li><a id="interview-newnote" href="note.html" data-icon="plus">New Note</a></li>
-				    <li><a id="interview-notes" href="notes.html" data-icon="grid">Notes</a></li>
-				    <li><a href="settings.html" data-icon="gear">Settings</a></li>
-			    </ul>
-		    </div>
-	    </div>
 	    
 	    <div data-role="popup" id="interviewNoteMenu">
 		<ul data-role="listview"  data-inset="true" style="min-width: 210px" data-theme="d" class="ui-listview">
