--- a/assets/www/feedback.html
+++ b/assets/www/feedback.html
@@ -20,10 +20,10 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="feedback" data-role="page" data-theme="a">
+        <div id="feedback" data-role="page" data-theme="c">
 
 			<div data-role="header" data-position="fixed">
-				<a href="interview.html" data-role="button" data-icon="arrow-l">Back</a>
+				<a href="interview.html" data-role="button" data-icon="arrow-l" data-transition="slide"">Back</a>
 				<h1>Feedback</h1>
 			</div><!-- /header -->
 		
@@ -39,7 +39,7 @@
 			<div data-role="footer" data-position="fixed">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="settings" data-icon="gear" data-iconpos="top">Setup</a></li>
+						<li><a href="settings" data-icon="gear" data-iconpos="top">Settings</a></li>
 					</ul>
 				</div>	
 			</div>
