--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,7 +4,7 @@
     	<title>Let's Hire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, height=device-height" />
+        <meta name="viewport" content=", width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, height=device-height" />
         
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />     
         <link rel="stylesheet" type="text/css" href="themes/android-theme.css" />   
@@ -20,7 +20,7 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="index" data-role="page" data-theme="a">
+        <div id="index" data-role="page" data-theme="c">
 
 			<div data-role="header" data-position="fixed">
 				<h1>Let's Hire</h1>
