--- a/assets/www/interviews.html
+++ b/assets/www/interviews.html
@@ -20,7 +20,7 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="interviews" data-role="page" data-theme="a">
+        <div id="interviews" data-role="page" data-theme="c">
 			<div data-role="header" data-position="fixed">
 				<a href="#userMenu" data-rel="popup"> Username </a>
 				<h1> My Interviews</h1>
@@ -29,8 +29,8 @@
 			</div><!-- /header -->
 			
 			<div data-role="popup" id="userMenu">
-				<ul data-role="listview" data-inset="true" data-theme="d" style="min-width: 210px;" data-theme="d">
-					<li data-role="divider" data-theme="e"> Username </li>
+				<ul data-role="listview" data-inset="true" data-theme="c" style="min-width: 210px;">
+					<li data-role="divider" data-theme="c"> Username </li>
 					<li data-corners="false" data-icon="arrow-r" data-iconpos="right">
 						<a href="settings.html">Settings</a>
 					</li>
@@ -41,7 +41,7 @@
 			</div>
 			
 			<div data-role="content">
-				<ul data-role="listview" data-theme="a" data-divider-theme="a" class="ui-listview">
+				<ul data-role="listview" data-theme="c" data-divider-theme="c" class="ui-listview">
 					<li data-role="list-divider" role="heading" class="ui-li ui-li-divider ui-li-has-count">
 						"Some Day"
 						<span class="ui-li-count ui-btn-up-c ui-btn-corner-all">2</span>
