--- a/assets/www/note.html
+++ b/assets/www/note.html
@@ -20,10 +20,10 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="note" data-role="page" data-theme="a">
+        <div id="note" data-role="page" data-theme="c">
 
 			<div data-role="header" data-position="fixed">
-				<a href="notes.html" data-role="button" data-icon="arrow-l">Back</a>
+				<a href="notes.html" data-role="button" data-icon="arrow-l" data-transition="slide">Back</a>
 				<h1>Internal Note</h1>
 			</div><!-- /header -->
 		
@@ -59,10 +59,10 @@
 			<div data-role="footer" data-position="fixed">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#" data-icon="arrow-u" data-iconpos="top">Attach Photo</a></li>
+						<li><a href="#" data-icon="arrow-u" data-iconpos="top" class="attachPhotoAction">Attach Photo</a></li>
 						<li><a href="#" data-icon="arrow-u" data-iconpos="top">Attach Audio</a></li>
 						<li><a href="#" data-icon="delete" data-iconpos="top">Delete</a>
-						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Setup</a></li>
+						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Settings</a></li>
 					</ul>
 				</div>	
 			</div>
