--- a/assets/www/notes.html
+++ b/assets/www/notes.html
@@ -20,10 +20,10 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="notes" data-role="page" data-theme="a">
+        <div id="notes" data-role="page" data-theme="c">
 
 			<div data-role="header" data-position="fixed">
-				<a href="interview.html" data-role="button" data-icon="arrow-l">Back</a>
+				<a href="interview.html" data-role="button" data-icon="arrow-l" data-transition="slide">Back</a>
 				<h1>Internal Note</h1>
 			</div><!-- /header -->
 		
@@ -50,7 +50,7 @@
 				<div data-role="navbar">
 					<ul>
 						<li><a href="note.html" data-icon="plus" data-iconpos="top">New</a></li>
-						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Setup</a></li>
+						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Settings</a></li>
 					</ul>
 				</div>	
 			</div>
