--- a/assets/www/settings.html
+++ b/assets/www/settings.html
@@ -20,7 +20,7 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="settings" data-role="page" data-theme="a">
+        <div id="settings" data-role="page" data-theme="c">
 
 			<div data-role="header" data-position="fixed">
 				<h1>Settings</h1>
@@ -33,8 +33,8 @@
 	                <label for="port">Port:</label>
 	                <input type="text" name="port" id="port" value="80" placeholder="3000"/>
 	                <fieldset class="ui-grid-a">
-	                	<div class="ui-block-a"><a href="index.html" data-role="button">Cancel</a></div>
-	                	<div class="ui-block-b"><input type="submit" value="Save" /></div>
+	                	<div class="ui-block-a"><a href="index.html" data-role="button" data-transition="slide">Cancel</a></div>
+	                	<div class="ui-block-b"><input type="submit" value="Save" data-transition="slide"/></div>
 	                </fieldset>
 	                
 	            </form>
