modify some views and add the connection checking

--- a/assets/www/feedback.html
+++ b/assets/www/feedback.html
@@ -23,7 +23,7 @@
         <div id="feedback" data-role="page" data-theme="c">
 
 			<div data-role="header" data-position="fixed">
-				<a href="interview.html" data-role="button" data-icon="arrow-l" data-transition="slide"">Back</a>
+				<a href="interview.html" data-role="button" data-icon="arrow-l" data-transition="slide">Back</a>
 				<h1>Feedback</h1>
 			</div><!-- /header -->
 		
