--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -33,13 +33,13 @@
 					<label for="password">Password:</label>
 					<input type="password" name="password" id="password" />
 					<!-- <input type="submit" value="Log in" action="interviews.html"/> -->
-					<a href="interviews.html" data-role="button">Log in</a>
+					<a href="interviews.html" data-role="button"> Log in </a>
 				</form>	
 			</div><!-- /content -->
 			<div data-role="footer" data-position="fixed">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Setup</a></li>
+						<li><a href="settings.html" data-icon="gear" data-iconpos="top">Settings</a></li>
 					</ul>
 				</div>	
 			</div>
