--- a/assets/www/interview.html
+++ b/assets/www/interview.html
@@ -24,30 +24,36 @@
 
 	    <div data-role="header"  data-position="fixed">
 		    <a href="interviews.html" data-role="button" data-icon="arrow-l" class="" data-transition="slide">Back</a>
-		    <h1>Interview Details</h1>	
-		    <a href="feedback.html" data-role="button" data-icon="star">Feedback</a>				
+		    <h1>Interview Details</h1>		
 	    </div><!-- /header -->
 		
 	    <div data-role="content">	
 		<a href="candidate.html"><h2>Avery Walker</h2></a>
 		<h5>11:30Am @ Room 203</h5>
 		<h5>Applying for Sr.MTS position.</h5>
-		<h5>Current Status: <span id="status" style="color:yellow;">Not Yet Start</span></h5>
-		<h5>Notes: NUMBER</h5>
-		<h5>Latest 3 Notes:</h5>
-		<a href="note.html"><h5>Note5</h5></a>
-		<a href="note.html"><h5>Note4</h5></a>
-		<a href="note.html"><h5>Note3</h5></a>
-		<a href="notes.html"><h5>See all</h5></a>
+		<h5>Current Status: <span id="status" style="color:red;">Not Yet Start</span></h5>
 		<br>
+		<h5>Attachments:</h5>
+		<a href="#popupParis" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="../img/paris.jpg" alt="Paris, France" style="width:20%"></a>
+		<a href="#popupSydney" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="../img/sydney.jpg" alt="Sydney, Australia" style="width:20%"></a>
+		<a href="#popupNYC" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="../img/newyork.jpg" alt="New York, USA" style="width:20%"></a>
+		<div data-role="popup" id="popupParis" data-overlay-theme="a" data-theme="d" data-corners="false">
+		    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a><img class="popphoto" src="../img/paris.jpg" style="max-height:512px;" alt="Paris, France">
+		</div>
+		<div data-role="popup" id="popupSydney" data-overlay-theme="a" data-theme="d" data-corners="false">
+		    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a><img class="popphoto" src="../img/sydney.jpg" style="max-height:512px;" alt="Sydney, Australia">
+		</div>
+		<div data-role="popup" id="popupNYC" data-overlay-theme="a" data-theme="d" data-corners="false">
+		    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a><img class="popphoto" src="../img/newyork.jpg" style="max-height:512px;" alt="New York, USA">
+		</div>
 	    </div><!-- /content -->
 	    
 	    <div data-role="footer" data-position="fixed">
 		    <div data-role="navbar">
 			    <ul>
 				    <li><a id="interview-action" href="#" data-icon="arrow-r">Start</a></li>
-				    <li><a id="interview-newnote" href="note.html" data-icon="plus">New Note</a></li>
-				    <li><a id="interview-notes" href="notes.html" data-icon="grid">Notes</a></li>
+				    <li><a id="interview-attach" href="#" data-icon="plus">Attach Photo</a></li>
+				    <li><a id="interview-feedback" href="feedback.html" data-icon="star">Feedback</a></li>
 				    <li><a href="settings.html" data-icon="gear">Settings</a></li>
 			    </ul>
 		    </div>
