--- a/assets/www/interviews.html
+++ b/assets/www/interviews.html
@@ -35,7 +35,7 @@
 						<a href="settings.html">Settings</a>
 					</li>
 					<li data-corners="false" data-icon="arrow-r" data-iconpos="right">
-						<a href="#">Log out</a>
+						<a href="#" id="log-out-button">Log out</a>
 					</li>
 				</ul>		
 			</div>
