refactor the whole UI for mobile pages

--- a/assets/www/about.html
+++ b/assets/www/about.html
@@ -20,25 +20,20 @@
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
     <body>
-        <div id="interview" data-role="page" data-theme="c">
+        <div id="about" data-role="page" data-theme="c">
 			<div data-role="header">
-				<a id="interview-back" data-role="button" data-icon="arrow-l">Back</a>
-				<h1>Interview</h1>
+				<a id="about-back" data-role="button" data-icon="arrow-l">Back</a>
+				<h1>About</h1>
 			</div>
 			
 			<div data-role="content">
-				<h1>TODO: Interview Details</h1>	
-			</div>
-			
-			<div data-role="footer" data-position="fixed" >
-				<div data-role="navbar" data-grid="c">
-					<ul>
-						<li><a id="interview-action" data-icon="right">Action</a></li>
-						<li><a id="interview-attach-photo" data-icon="plus">Photo</a></li>
-						<li><a id="interview-attach-audio" data-icon="plus">Audio</a></li>
-						<li><a id="interview-feedback" data-icon="edit">Feedback</a></li>
-					</ul>
-				</div>
+				<center><h1 >LetsHire Mobile</h1></center>
+				<br>
+				<center><a href="http://letshire.cloudfoundry.com">letshire.cloudfoundry.com</a></center>
+				<br>
+				<center>by</center>
+				<center><h3>Tempest Dev Empathy</h3></center>
+				
 			</div>
 			
 		</div><!-- /page -->
