--- a/assets/www/feedback.html
+++ b/assets/www/feedback.html
@@ -4,15 +4,15 @@
     	<title>Let's Hire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+        <meta name="viewport" content=", width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, height=device-height" />
         
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />     
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />     
         <link rel="stylesheet" type="text/css" href="themes/android-theme.css" />   
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
-        <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.js"></script>
 		<script type="text/javascript">
 			var DEBUG_ANDROID_THEME=true
 		</script>    
@@ -21,28 +21,23 @@
     </head>
     <body>
         <div id="feedback" data-role="page" data-theme="c">
-
-			<div data-role="header" data-position="fixed">
-				<a href="interview.html" data-role="button" data-icon="arrow-l" data-transition="slide">Back</a>
+			<div data-role="header">
+				<a id="feedback-back" data-role="button" data-icon="arrow-l">Back</a>
 				<h1>Feedback</h1>
-			</div><!-- /header -->
-		
-			<div data-role="content">
-				<form id="user-feedback">
-					<textarea type="text" name="feedback" id="feedback" >some overall comments</textarea>
-					<fieldset class="ui-grid-a">
-					    <div class="ui-block-a"><a href="interviews.html" data-role="button">Cancel</a></div>
-					    <div class="ui-block-b"><input type="submit" value="Save"/></div>        
-					</fieldset>
-				</form>	
-			</div><!-- /content -->
-			<div data-role="footer" data-position="fixed">
-				<div data-role="navbar">
-					<ul>
-						<li><a href="settings" data-icon="gear" data-iconpos="top">Settings</a></li>
-					</ul>
-				</div>	
 			</div>
+			
+			<div data-role="content">
+				<textarea id="feedback-content" style="height: 8em !important"></textarea>
+				<fieldset class="ui-grid-a">
+					<div class="ui-block-a">
+						<button id="feedback-cancel">Cancel</button>	
+					</div>
+					<div class="ui-block-b">
+						<button id="feedback-save">Save</button>	
+					</div>
+				</fieldset>
+			</div>
+			
 		</div><!-- /page -->
     </body>
 </html>
