finish TODO: for interviews and interview page

--- a/assets/www/interview.html
+++ b/assets/www/interview.html
@@ -27,7 +27,28 @@
 			</div>
 			
 			<div data-role="content">
-				<h1>TODO: Interview Details</h1>	
+				<div id="interview-text-details">
+					<a href="#"><h1>Candidate Name</h1></a>
+					<p> Apply for Sr. MTS</p>
+					<p> Room : 202</p>
+					<p> Status: ready </p>
+					<p> Time: 13:30 Today</p>
+				</div>
+				<p><strong>Attachments:</strong></p>
+				<div id="interview-attachment-details">
+					<a href="#popupParis" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="../img/paris.jpg" alt="Paris, France" style="width:30%"></a>
+					<a href="#popupSydney" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="..//img/sydney.jpg" alt="Sydney, Australia" style="width:30%"></a>
+					<a href="#popupNYC" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="../img/newyork.jpg" alt="New York, USA" style="width:30%"></a>
+					<div data-role="popup" id="popupParis" data-overlay-theme="a" data-theme="d" data-corners="false">
+						<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a><img class="popphoto" src="../img/paris.jpg" style="max-height:512px;" alt="Paris, France">
+					</div>
+					<div data-role="popup" id="popupSydney" data-overlay-theme="a" data-theme="d" data-corners="false">
+						<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a><img class="popphoto" src="../img/sydney.jpg" style="max-height:512px;" alt="Sydney, Australia">
+					</div>
+					<div data-role="popup" id="popupNYC" data-overlay-theme="a" data-theme="d" data-corners="false">
+						<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a><img class="popphoto" src="../img/newyork.jpg" style="max-height:512px;" alt="New York, USA">
+					</div>
+				</div>
 			</div>
 			
 			<div data-role="footer" data-position="fixed" >
