--- a/assets/www/about.html
+++ b/assets/www/about.html
@@ -22,7 +22,7 @@
     <body>
         <div id="about" data-role="page" data-theme="c">
 			<div data-role="header">
-				<a id="about-back" data-role="button" data-icon="arrow-l">Back</a>
+				<a id="about-back" data-role="button" data-icon="arrow-l" data-rel="back">Back</a>
 				<h1>About</h1>
 			</div>
 			
