--- a/assets/www/feedback.html
+++ b/assets/www/feedback.html
@@ -22,7 +22,7 @@
     <body>
         <div id="feedback" data-role="page" data-theme="c">
 			<div data-role="header">
-				<a id="feedback-back" data-role="button" data-icon="arrow-l">Back</a>
+				<a id="feedback-back" data-role="button" data-icon="arrow-l" data-rel="back">Back</a>
 				<h1>Feedback</h1>
 			</div>
 			
@@ -30,7 +30,7 @@
 				<textarea id="feedback-content" style="height: 8em !important"></textarea>
 				<fieldset class="ui-grid-a">
 					<div class="ui-block-a">
-						<button id="feedback-cancel">Cancel</button>	
+						<a data-role="button" data-rel="back">Cancel</a>	
 					</div>
 					<div class="ui-block-b">
 						<button id="feedback-save">Save</button>	
