--- a/assets/www/interview.html
+++ b/assets/www/interview.html
@@ -22,7 +22,7 @@
     <body>
         <div id="interview" data-role="page" data-theme="c">
 			<div data-role="header">
-				<a id="interview-back" data-role="button" data-icon="arrow-l">Back</a>
+				<a id="interview-back" data-role="button" data-icon="arrow-l" data-rel="back">Back</a>
 				<h1>Interview</h1>
 			</div>
 			
@@ -57,7 +57,7 @@
 						<li><a id="interview-action" data-icon="right">Action</a></li>
 						<li><a id="interview-attach-photo" data-icon="plus">Photo</a></li>
 						<li><a id="interview-attach-audio" data-icon="plus">Audio</a></li>
-						<li><a id="interview-feedback" data-icon="edit">Feedback</a></li>
+						<li><a id="interview-feedback" data-icon="edit" href="feedback.html">Feedback</a></li>
 					</ul>
 				</div>
 			</div>
