--- a/assets/www/settings.html
+++ b/assets/www/settings.html
@@ -22,7 +22,7 @@
     <body>
         <div id="settings" data-role="page" data-theme="c">
 			<div data-role="header">
-				<a id="settings-back" data-role="button" data-icon="arrow-l">Back</a>
+				<a id="settings-back" data-role="button" data-icon="arrow-l" data-rel="back">Back</a>
 				<h1>Settings</h1>	
 			</div>
 			
