--- a/assets/www/feedback.html
+++ b/assets/www/feedback.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
     <head>
     	<title>Let's Hire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -15,7 +15,8 @@
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.js"></script>
 		<script type="text/javascript">
 			var DEBUG_ANDROID_THEME=true
-		</script>    
+		</script>
+		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/jquery.mobile.android-theme.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>  
     </head>
